[gd_scene load_steps=6 format=2]

[ext_resource path="res://Systems/UI/FullscreenToggleUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Systems/UI/SettingUI.gd" type="Script" id=2]
[ext_resource path="res://Systems/UI/ResolutionSelectUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Systems/UI/AudioMusicUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Systems/UI/SfxSound.tscn" type="PackedScene" id=5]

[node name="SettingUI" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -172.0
margin_right = 271.0
margin_bottom = 172.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingMenu" type="VBoxContainer" parent="."]
margin_right = 542.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 11

[node name="SettingLabel" type="Label" parent="SettingMenu"]
margin_right = 542.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "SETTING"
align = 1
valign = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="SettingMenu"]
margin_top = 18.0
margin_right = 542.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionSelectUI" parent="SettingMenu" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 26.0
margin_right = 542.0
margin_bottom = 46.0

[node name="FullscreenToggleUI" parent="SettingMenu" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 50.0
margin_right = 542.0
margin_bottom = 74.0

[node name="SfxSound" parent="SettingMenu" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 78.0
margin_right = 542.0
margin_bottom = 94.0

[node name="AudioMusicUI" parent="SettingMenu" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 98.0
margin_right = 542.0
margin_bottom = 114.0

[node name="ControlCommand" type="HBoxContainer" parent="SettingMenu"]
margin_top = 118.0
margin_right = 542.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BackButton" type="Button" parent="SettingMenu/ControlCommand"]
margin_top = 206.0
margin_right = 269.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Back"

[node name="ApplyButton" type="Button" parent="SettingMenu/ControlCommand"]
margin_left = 273.0
margin_top = 206.0
margin_right = 542.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Apply"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="resolution_changed" from="SettingMenu/ResolutionSelectUI" to="." method="_on_ResolutionSelectUI_resolution_changed"]
[connection signal="toggled" from="SettingMenu/FullscreenToggleUI" to="." method="_on_FullscreenToggleUI_toggled"]
[connection signal="volume_changed" from="SettingMenu/SfxSound" to="." method="_on_SfxSound_volume_changed"]
[connection signal="volume_changed" from="SettingMenu/AudioMusicUI" to="." method="_on_AudioMusicUI_volume_changed"]
[connection signal="pressed" from="SettingMenu/ControlCommand/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SettingMenu/ControlCommand/ApplyButton" to="." method="_on_ApplyButton_pressed"]
